examples/type_system/failing/92_hm_if_branch_contextual_mismatch.flx
// E300: concrete if branches now report contextual mismatch diagnostics with dual labels.
fn main() -> Unit {
    let _x = if true {
        42
    } else {
        "nope"
    }
}
